--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,25 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="background">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+  <div class="row">
+  <div class="custom-header">
+    <!--<div id="wrap">-->
+      <!--<form action="" autocomplete="on">-->
+        <!--<input id="search" name="search" type="text" placeholder="Search"><input id="search_submit" value="Rechercher" type="submit">-->
+      <!--</form>-->
+    <!--</div>-->
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+      <i class="fa fa-search fa-2x"></i>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+      <i class="fa fa-cog fa-2x right"></i>
+    </div>
+  </div></div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+
+  <div class="row">
+    <span ng-include="'views/panels.html'">
+
+      </span>
+  </div>
 </div>
