--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -43,12 +43,32 @@ body {
   height: 100%;
 }
 
-.panel-body .row {
-  height:100%;
+.row .content{
+  text-overflow: ellipsis; overflow: hidden; height: 100px;
+}
+
+.row .user {
+  margin-top: 5px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.row .url {
+  color: blue;
+  margin-left: 0!important;
+  margin-right: 0!important;
+}
+
+.row .bottom {
+
+}
+
+.height-max {
+  height: 100%;
 }
 
 .row .image {
-  width: 200px;
+  width: 100%;
   height: 100%;
   display: inline-block;
   overflow: hidden;
