--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -1,9 +1,28 @@
 <div class="panel panel-default">
   <div class="panel-body border-left">
     <div class="row">
-      <div class="image">
-        <img src="../images/empty.gif">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-sx-4 height-max">
+        <div class="image">
+          <img src="../images/empty.gif">
+        </div>
       </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-6 col-sx-6 height-max ">
+        <div class="row content">
+          <p>aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa </p>
+        </div>
+        <div class="row bottom">
+          <div class="row user">
+            <i class="fa fa-facebook-official"></i> @Nijat12
+          </div>
+          <div class="row url">
+            http://facebook..com
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
   </div>
 </div>
