--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body border-left">
-    <div class="row">
+    <div class="row main-row">
       <div class="col-lg-4 col-md-4 col-sm-4 col-sx-4 height-max">
         <div class="image">
           <img src="../images/empty.gif">
