--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,8 +24,8 @@
     <button type="button" class="btn btn-info-outline" ng-click="DeleteContacts()">DeleteContact</button>
 
 
-    <button type="button" class="btn btn-warning-outline" ng-click="UpdateContacts1()">UpdateContactWithID</button>
-    <button type="button" class="btn btn-danger-outline" ng-click="UpdateContacts2()">!UpdateContactWithoutID</button>
-    <button type="button" class="btn btn-danger-outline" ng-click="CreateContacts()">CreateContact</button>
+    <button type="button" class="btn" ng-click="UpdateContacts1()">UpdateContactWithID</button>
+    <button type="button" class="btn" ng-click="create2()">createWithoutID</button>
+    <button type="button" class="btn" ng-click="CreateContacts()">CreateContact</button>
   </div>
 </div>
