--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,10 @@
     Always a pleasure scaffolding your apps.
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+
 </div>
+
+<i class="fa fa-cog fa-5x"></i>
 
 <div class="row marketing">
   <h4>HTML5 Boilerplate</h4>
@@ -20,4 +23,10 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
+
+  <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+  <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
+  <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
+  <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+  <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
