--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -1,28 +1,21 @@
-<div class="panel panel-default">
-  <div class="panel-body border-left">
-    <div class="row main-row">
-      <div class="col-lg-4 col-md-4 col-sm-4 col-sx-4 height-max">
-        <div class="image">
-          <img src="../images/empty.gif">
-        </div>
+<div class="tickPane">
+  <div class="flex-container">
+    <div class="tickPaneStart flex">
+      <img src="https://scontent-lga3-1.cdninstagram.com/t51.2885-19/11272096_360080904201743_96395588_a.jpg" class="flex">
+    </div>
+    <div class="tickPaneMid flex-container flex-column flex-3">
+      <span class="tickId flex"># 1</span>
+      <span class="tickContent flex">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maxime facilis omnis fuga commodi quod voluptatem molestiae neque. Perspiciatis maxime quis facilis voluptatem delectus iusto vel dolorem rem quidem, quae quasi consequatur dicta alias labore molestiae fugiat numquam, reprehenderit, temporibus sit fugit magni magnam nihil perferendis! Sapiente facere beatae asperiores officia voluptatibus error possimus minus impedit modi. Commodi veniam accusamus velit similique voluptatum a cum minus quia dolorem fugiat beatae, officiis at, ex ullam enim, dolore consectetur ut quidem adipisci in eius quod! Dolore perspiciatis eveniet hic ex, illum qui saepe, distinctio facilis voluptatibus praesentium delectus, eius minima quasi quaerat.</span>
+      <div class="flex">
+        <!-- <i class="tickSocial fa fa-facebook"></i> -->
+        <i class="tickSocial fa fa-facebook-official"></i>
+        <a class="tickUser" href="">@vankanel</a>
       </div>
-
-      <div class="col-lg-6 col-md-6 col-sm-6 col-sx-6 height-max ">
-        <div class="row content">
-          <p>aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa  aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa aaaaaaa </p>
-        </div>
-        <div class="row bottom">
-          <div class="row user">
-            <i class="fa fa-facebook-official"></i> @Nijat12
-          </div>
-          <div class="row url">
-            http://facebook..com
-          </div>
-        </div>
-      </div>
-
-
-
+      <span class="tickDate flex">04/15/2016 12:00PM</span>
+    </div>
+    <div class="tickPaneEnd flex-container flex-column flex">
+      <i class="tickArchiveBtn fa fa-times fa-2x flex" />
+      <span><i class="tickMailBtn fa fa-envelope fa-2x flex" /></span>
     </div>
   </div>
 </div>
