--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,12 +16,14 @@
   </div>
 
   <div class="row">
+    <div ng-repeat="post in posts">
     <span ng-include="'views/panels.html'">
 
     </span>
+    </div>
   </div>
 
-  <div class="row">
+  <div class="row" style="position: fixed; width: 100%;bottom: 5px; right: 5px;">
     <div class="tickCountBtns">
       <button class="tickBadBtn">
         <span class="tickBtnName">Bad</span>
