--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -1,10 +1,10 @@
-<div class="tickPane">
+<div class="tickPane" ng-class="post.polarity===-1 ? 'red' : (post.polarity===0? 'yellow': 'green')">
   <div class="flex-container">
     <div class="tickPaneStart flex">
       <img src="https://scontent-lga3-1.cdninstagram.com/t51.2885-19/11272096_360080904201743_96395588_a.jpg" class="flex">
     </div>
     <div class="tickPaneMid flex-container flex-column flex-3">
-      <span class="tickId flex"># 1</span>
+      <span class="tickId flex"># {{post.id}}</span>
       <span class="tickContent flex">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maxime facilis omnis fuga commodi quod voluptatem molestiae neque. Perspiciatis maxime quis facilis voluptatem delectus iusto vel dolorem rem quidem, quae quasi consequatur dicta alias labore molestiae fugiat numquam, reprehenderit, temporibus sit fugit magni magnam nihil perferendis! Sapiente facere beatae asperiores officia voluptatibus error possimus minus impedit modi. Commodi veniam accusamus velit similique voluptatum a cum minus quia dolorem fugiat beatae, officiis at, ex ullam enim, dolore consectetur ut quidem adipisci in eius quod! Dolore perspiciatis eveniet hic ex, illum qui saepe, distinctio facilis voluptatibus praesentium delectus, eius minima quasi quaerat.</span>
       <div class="flex">
         <!-- <i class="tickSocial fa fa-facebook"></i> -->
