--- a/app/views/modal/admin.css
+++ b/app/views/modal/admin.css
@@ -1,139 +1,65 @@
-.input {
-  position: relative;
-  z-index: 1;
-  display: inline-block;
-  margin: 1em;
-  max-width: 350px;
-  width: calc(100% - 2em);
-  vertical-align: top;
+
+.modal-body {
+  margin: 0 80px;
 }
 
-.input__field {
-  position: relative;
-  display: block;
+.modal-body .col-lg-2{
+  text-align: center;
+}
+
+.modal-header .xButton {
   float: right;
-  padding: 0.8em;
-  width: 60%;
-  border: none;
-  border-radius: 0;
-  background: #f0f0f0;
-  color: #aaa;
-  font-weight: bold;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  -webkit-appearance: none; /* for box shadows to show on iOS */
 }
 
-.input__field:focus {
-  outline: none;
+.form-group label{
+  text-align: right;
+  margin-top: 50px;
 }
 
-.input__label {
-  display: inline-block;
-  float: right;
-  padding: 0 1em;
-  width: 40%;
-  color: #6a7989;
-  font-weight: bold;
-  font-size: 70.25%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.col-md-8 textarea{
+  width:100%;
+  height: 150px;
 }
 
-.input__label-content {
-  position: relative;
-  display: block;
-  padding: 1.6em 0;
-  width: 100%;
+.modal-footer {
+  border-top: none;
+}
+.content .col-lg-2{
+  text-align: center;
 }
 
-.graphic {
-  position: absolute;
-  top: 0;
-  left: 0;
-  fill: none;
+.row .col-lg-8 .row{
+  text-align: center;
+  margin-top:20px;
 }
 
-.icon {
-  color: #ddd;
-  font-size: 150%;
+.second-row {
+  /*border-top: 1px solid #ddd;*/
+  padding-bottom: 20px;
+  margin-bottom: 40px;
 }
 
-
-.input--hoshi {
-  overflow: hidden;
+.content{
+  border-top: 1px solid #ddd;
+  padding:20px 0;
 }
 
-.input__field--hoshi {
-  margin-top: 1em;
-  padding: 0.85em 0.15em;
-  width: 100%;
+.btn-clear{
+  margin:20px 120px;
   background: transparent;
-  color: #595F6E;
+  border: 1px solid #ddd;
 }
 
-.input__label--hoshi {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 0 0.25em;
-  width: 100%;
-  height: calc(100% - 1em);
-  text-align: left;
-  pointer-events: none;
+.content .col-lg-2 .fa {
+  margin-top:5px;
+}
+.content .col-lg-2 .col-lg-6 .row {
+  text-align: center;
 }
 
-.input__label-content--hoshi {
-  position: absolute;
-}
-
-.input__label--hoshi::before,
-.input__label--hoshi::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: calc(100% - 10px);
-  border-bottom: 1px solid #B9C1CA;
-}
-
-.input__label--hoshi::after {
-  margin-top: 2px;
-  border-bottom: 4px solid red;
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-}
-
-.input__label--hoshi-color-1::after {
-  border-color: hsl(200, 100%, 50%);
-}
-
-.input__label--hoshi-color-2::after {
-  border-color: hsl(160, 100%, 50%);
-}
-
-.input__label--hoshi-color-3::after {
-  border-color: hsl(20, 100%, 50%);
-}
-
-.input__field--hoshi:focus + .input__label--hoshi::after,
-.input--filled .input__label--hoshi::after {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.input__field--hoshi:focus + .input__label--hoshi .input__label-content--hoshi,
-.input--filled .input__label-content--hoshi {
-  -webkit-animation: anim-1 0.3s forwards;
-  animation: anim-1 0.3s forwards;
+.content .col-lg-2 .col-lg-6 {
+  height: 100%;
+  margin-top: 10px;
 }
 
 @-webkit-keyframes anim-1 {
@@ -169,5 +95,36 @@
     opacity: 1;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
+  }
+}
+
+
+@media(max-width: 1440px){
+
+  .modal-content{
+    width:100vw;
+  }
+
+  /*.modal-header .col-lg-4{*/
+    /*width:50%;*/
+    /*margin-right:0;*/
+  /*}*/
+  .modal-body{
+    margin:0;
+  }
+
+  .content {
+    width: 90vw;
+  }
+
+  .btn-clear{
+    margin: 20px 153px;
+  }
+
+}
+@media(max-width: 990px){
+  .col-md-8 textarea{
+    width: 90vw;
+    display: block;
   }
 }
