--- a/app/views/modal/admin.html
+++ b/app/views/modal/admin.html
@@ -1,47 +1,62 @@
 <link rel="stylesheet" href="views/modal/admin.css">
 
 <div class="modal-header">
-  <h3 class="modal-title"><i class="fa fa-cog fa-fw"></i> Admin</h3>
+  <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+    <h3 class="modal-title">Admin</h3>
+  </div>
+  <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 col-xs-2 col-xs-offset-3">
+
+  </div>
+  <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 xButton">
+    <i class="fa fa-2x fa-times" ng-click="ok()"></i>
+  </div>
 </div>
+
 <div class="modal-body">
-  <section class="content">
-    <div class="row">
-      <div class="col-lg-3">
-          <span class="input input--hoshi">
-            <input class="input__field input__field--hoshi" type="text" id="input-4" />
-            <label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
-              <span class="input__label-content input__label-content--hoshi">First Name</span>
-            </label>
-          </span>
-      </div>
-      <div class="col-lg-3">
-          <span class="input input--hoshi">
-            <input class="input__field input__field--hoshi" type="text" id="input-5" />
-            <label class="input__label input__label--hoshi input__label--hoshi-color-2" for="input-5">
-              <span class="input__label-content input__label-content--hoshi">Last Name</span>
-            </label>
-          </span>
-      </div>
-      <div class="col-lg-3">
-          <span class="input input--hoshi">
-            <input class="input__field input__field--hoshi" type="text" id="input-6" />
-            <label class="input__label input__label--hoshi input__label--hoshi-color-3" for="input-6">
-              <span class="input__label-content input__label-content--hoshi">E-mail</span>
-            </label>
-          </span>
-      </div>
-      <div class="col-lg-3">
-          <span class="input input--hoshi">
-            <input class="input__field input__field--hoshi" type="text" id="input-7" />
-            <label class="input__label input__label--hoshi input__label--hoshi-color-3" for="input-7">
-              <span class="input__label-content input__label-content--hoshi">Phone</span>
-            </label>
-          </span>
+
+  <div class="row second-row">
+    <div class="form-group">
+      <label class="col-md-2 control-label" for="criteria">Search Criteria</label>
+      <div class="col-md-8">
+        <textarea class="form-control" id="criteria" name="criteria"></textarea>
       </div>
     </div>
-  </section>
+  </div>
+  <!--<div class="row second-row">-->
+    <!--<div class="col-lg-8">-->
+      <!--<div class="row">-->
+        <!--User Info-->
+      <!--</div></div>-->
+    <!--<div class="col-lg-2">-->
+      <!--<div class="row">-->
+        <!--Alert Settings-->
+      <!--</div>-->
+      <!--<div class="row">-->
+        <!--<div class="col-lg-6">-->
+          <!--<label>Critical</label>-->
+        <!--</div>-->
+        <!--<div class="col-lg-6">-->
+          <!--<label>Bad</label>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-lg-2"></div>-->
+  <!--</div>-->
+  <div ng-repeat="contact in contacts">
+    <span ng-include="'views/modal/inputs.html'">
+    </span>
+  </div>
+
+  <div class="row third-row">
+    <div class="col-lg-4">
+      <button type="button" class="btn btn-clear" ng-click="CreateContacts()">
+        <i class="fa fa-2x fa-plus"></i>
+      </button>
+    </div>
+  </div>
 </div>
-<div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>
-  <button class="btn btn-primary" type="button" ng-click="ok()"><i class="fa fa-floppy-o fa-fw"></i> Save</button>
-</div>
+<!--<div class="modal-footer">-->
+  <!--<button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>-->
+  <!--<button class="btn btn-primary" type="button" ng-click="ok()">-->
+    <!--<i class="fa fa-floppy-o fa-fw"></i> Save</button>-->
+<!--</div>-->
