--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -1,21 +1,28 @@
 <div class="tickPane" ng-class="post.polarity===-1 ? 'red' : (post.polarity===0? 'yellow': 'green')">
-  <div class="flex-container">
-    <div class="tickPaneStart flex">
-      <img src="https://scontent-lga3-1.cdninstagram.com/t51.2885-19/11272096_360080904201743_96395588_a.jpg" class="flex">
+  <div class="pane-container">
+    <div class="tickPaneStart col-lg-2">
+      <img src="https://scontent-lga3-1.cdninstagram.com/t51.2885-19/11272096_360080904201743_96395588_a.jpg">
+      <!--<link rel="image_src" href="{{post.source}}" />-->
+      <!--<div class="fb-post" class="flex" data-href="{post.source}"></div>-->
     </div>
-    <div class="tickPaneMid flex-container flex-column flex-3">
-      <span class="tickId flex"># {{post.id}}</span>
-      <span class="tickContent flex">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati maxime facilis omnis fuga commodi quod voluptatem molestiae neque. Perspiciatis maxime quis facilis voluptatem delectus iusto vel dolorem rem quidem, quae quasi consequatur dicta alias labore molestiae fugiat numquam, reprehenderit, temporibus sit fugit magni magnam nihil perferendis! Sapiente facere beatae asperiores officia voluptatibus error possimus minus impedit modi. Commodi veniam accusamus velit similique voluptatum a cum minus quia dolorem fugiat beatae, officiis at, ex ullam enim, dolore consectetur ut quidem adipisci in eius quod! Dolore perspiciatis eveniet hic ex, illum qui saepe, distinctio facilis voluptatibus praesentium delectus, eius minima quasi quaerat.</span>
+    <div class="tickPaneMid col-lg-9">
+      <span class="tickId"># {{post.id}}</span>
+      <span class="tickContent">{{post.content}}</span>
       <div class="flex">
         <!-- <i class="tickSocial fa fa-facebook"></i> -->
         <i class="tickSocial fa fa-facebook-official"></i>
-        <a class="tickUser" href="">@vankanel</a>
+        <span class="tickUser">@{{post.user}}</span>
       </div>
-      <span class="tickDate flex">04/15/2016 12:00PM</span>
+      <a class="flex" href="{{post.source}}" target="_blank">{{post.source}}</a>
+      <!--<span class="tickDate flex">04/15/2016 12:00PM</span>-->
     </div>
-    <div class="tickPaneEnd flex-container flex-column flex">
-      <i class="tickArchiveBtn fa fa-times fa-2x flex" />
-      <span><i class="tickMailBtn fa fa-envelope fa-2x flex" /></span>
+    <div class="tickPaneEnd col-lg-1">
+      <div class="row">
+      <i class="tickArchiveBtn fa fa-times fa-3x" ng-click="DeletePosts($index)"></i>
+      </div>
+      <div class="row sec">
+        <span><i class="tickMailBtn fa fa-envelope fa-3x"></i></span>
+      </div>
     </div>
   </div>
 </div>
