Save toast, images

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,7 @@
       <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
         <i class="fa fa-search fa-2x" style="float: left;" ng-click="search=!search"></i>
         <input type="text" class="form-control search-form" placeholder="Search" ng-show="search"
-               ng-model="searchVal">
+               ng-model="searchVal" ng-blur="searchFunc()">
       </div>
     </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
@@ -18,7 +18,7 @@
   </div>
 
   <div class="row second">
-    <div ng-repeat="post in posts | filter:searchVal:post.id">
+    <div ng-repeat="post in posts | filter:searchVal:post">
     <span ng-include="'views/panels.html'">
     </span>
     </div>
