--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -143,7 +143,7 @@ body {
   border: 1px solid #ddd;
 }
 
-.row .image img {
+img {
   width: 100%;
   height: 100%;
 }
@@ -325,7 +325,9 @@ body {
 }
 
 .tickPaneEnd .sec {
-  margin-top: 150px;
+  bottom: 20px;
+  position: absolute;
+  right: 15px;
 }
 
 .tickPane .tickId {}
@@ -351,6 +353,7 @@ body {
 }
 
 .tickPane .tickDate {
+
   color: #aaa;
 }
 
@@ -440,6 +443,7 @@ body {
 
   .tickPaneStart img{
     width: 100px;
+    height: 100%;
   }
   .tickPaneMid{
     margin-top:95px;
