--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -21,7 +21,7 @@
       <i class="tickArchiveBtn fa fa-times fa-3x" ng-click="DeletePosts(post)"></i>
       </div>
       <div class="row sec">
-        <span><i class="tickMailBtn fa fa-envelope fa-3x"></i></span>
+        <span><i class="tickMailBtn fa fa-envelope fa-3x" ng-click="emailOpen('md',post)"></i></span>
       </div>
     </div>
   </div>
