--- a/app/views/modal/admin.html
+++ b/app/views/modal/admin.html
@@ -8,7 +8,10 @@
 
   </div>
   <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 xButton">
-    <i class="fa fa-2x fa-times" ng-click="ok()"></i>
+
+    <button class="btn btn-c">
+      <i class="fa fa-2x fa-times" ng-click="ok()"></i>
+    </button>
   </div>
 </div>
 
@@ -16,47 +19,23 @@
 
   <div class="row second-row">
     <div class="form-group">
-      <label class="col-md-2 control-label" for="criteria">Search Criteria</label>
+      <label class="col-md-2 control-label">Search Criteria</label>
       <div class="col-md-8">
-        <textarea class="form-control" id="criteria" name="criteria"></textarea>
+        <tags-input ng-model="tags" on-tag-added="updateTags()" on-tag-removed="updateTags()" replace-spaces-with-dashes=false></tags-input>
+        <!--<textarea class="form-control" id="criteria" name="criteria" ng-model="tags"></textarea>-->
       </div>
     </div>
   </div>
-  <!--<div class="row second-row">-->
-    <!--<div class="col-lg-8">-->
-      <!--<div class="row">-->
-        <!--User Info-->
-      <!--</div></div>-->
-    <!--<div class="col-lg-2">-->
-      <!--<div class="row">-->
-        <!--Alert Settings-->
-      <!--</div>-->
-      <!--<div class="row">-->
-        <!--<div class="col-lg-6">-->
-          <!--<label>Critical</label>-->
-        <!--</div>-->
-        <!--<div class="col-lg-6">-->
-          <!--<label>Bad</label>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-lg-2"></div>-->
-  <!--</div>-->
   <div ng-repeat="contact in contacts">
     <span ng-include="'views/modal/inputs.html'">
     </span>
   </div>
 
   <div class="row third-row">
-    <div class="col-lg-4">
+    <div class="col-lg-12">
       <button type="button" class="btn btn-clear" ng-click="CreateContacts()">
         <i class="fa fa-2x fa-plus"></i>
       </button>
     </div>
   </div>
 </div>
-<!--<div class="modal-footer">-->
-  <!--<button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>-->
-  <!--<button class="btn btn-primary" type="button" ng-click="ok()">-->
-    <!--<i class="fa fa-floppy-o fa-fw"></i> Save</button>-->
-<!--</div>-->
