--- a/app/views/modal/inputs.html
+++ b/app/views/modal/inputs.html
@@ -1,43 +1,48 @@
 <section class="content">
   <div class="row">
     <div class="col-lg-3">
-      <input type="text" placeholder="Name" class="form-control input-md" ng-model="contact.name" ng-blur="UpdateContacts1($index)">
+      <label>Name</label>
+      <input type="text" placeholder="" class="form-control input-md" ng-model="contact.name" ng-blur="UpdateContacts1($index)">
     </div>
     <div class="col-lg-3">
-      <input type="text" placeholder="Email" class="form-control input-md" ng-model="contact.email" ng-blur="UpdateContacts1($index)">
+      <label>E-mail</label>
+      <input type="text" placeholder="" class="form-control input-md" ng-model="contact.email" ng-blur="UpdateContacts1($index)">
 
     </div>
-    <div class="col-lg-2">
-      <input type="text" placeholder="Phone" class="form-control input-md" ng-model="contact.phone" ng-blur="UpdateContacts1($index)">
+    <div class="col-lg-3">
+      <label>Phone</label>
+      <input type="text" placeholder="" class="form-control input-md" ng-model="contact.phone" ng-blur="UpdateContacts1($index)">
 
     </div>
     <div class="col-lg-2">
       <div class="row">
         <div class="col-lg-6">
-          <div class="row">
-            Critical
+          <!--<div class="row">-->
+            <label>Critical</label><br>
             <input type="checkbox"
                    ng-true-value=true
                    ng-false-value=false
                    ng-model="contact.critical"
                    ng-change="UpdateContacts1($index)">
-          </div>
+          <!--</div>-->
         </div>
         <div class="col-lg-6">
-          <div class="row">
-            Bad
+          <!--<div class="row">-->
+            <label>Bad</label><br>
             <input type="checkbox"
                    ng-true-value=true
                    ng-false-value=false
                    ng-model="contact.bad"
                    ng-change="UpdateContacts1($index)">
-          </div>
+          <!--</div>-->
         </div>
       </div>
 
     </div>
-    <div class="col-lg-2">
-      <i class="fa fa-2x fa-trash" ng-click="DeleteContacts($index)"></i>
+    <div class="col-lg-1">
+      <button class="btn btn-c">
+        <i class="fa fa-2x fa-trash" ng-click="DeleteContacts($index)"></i>
+      </button>
     </div>
 
   </div>
