--- a/app/views/modal/inputs.html
+++ b/app/views/modal/inputs.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-lg-6">
           <!--<div class="row">-->
-            <label>Critical</label><br>
+            <label>Negative</label><br>
             <input type="checkbox"
                    ng-true-value=true
                    ng-false-value=false
@@ -28,7 +28,7 @@
         </div>
         <div class="col-lg-6">
           <!--<div class="row">-->
-            <label>Bad</label><br>
+            <label>Neutral</label><br>
             <input type="checkbox"
                    ng-true-value=true
                    ng-false-value=false
