--- a/app/views/main.html
+++ b/app/views/main.html
@@ -34,6 +34,9 @@
 
 
   <div class="row bottom">
+    <div class="col-lg-2 col-lg-offset-5 count">
+      {{count()}}
+    </div>
     <div class="tickCountBtns">
       <button class="tickUrgentBtn" ng-click="red()">
         <span class="tickBtnName redlabel">Negative</span>
