--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,9 +10,9 @@
         <button class="btn btn-c" style="float: left;">
           <i class="fa fa-search fa-2x" ng-click="openSearch()"></i>
         </button>
-        <input focus-on="search" type="search" class="form-control search-form" placeholder="Search" ng-show="search"
+        <input id="search" focus-on="search" type="search" class="form-control search-form" placeholder="Search" ng-show="search"
                ng-model="searchVal" ng-change="filter()" ng-blur="searchFunc()">
-        <button class="btn btn-c" style="margin-left: -15px;" ng-if="search" ng-click="searchVal=''">
+        <button id="searchX" class="btn btn-c" style="margin-left: -15px;" ng-show="search" ng-click="searchClear()">
           <i class="fa fa-1x fa-times"></i>
         </button>
       </div>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="row second">
-    <div ng-repeat="post in postsOnView">
+    <div ng-repeat="post in postsOnView" class="animate-repeat">
     <span ng-include="'views/panels.html'">
     </span>
     </div>
