--- a/app/views/panels.html
+++ b/app/views/panels.html
@@ -20,7 +20,7 @@
       <div class="row">
 
         <button class="btn btn-c">
-          <i class="tickArchiveBtn fa fa-times fa-3x" ng-click="DeletePosts(post)"></i>
+          <i class="tickArchiveBtn fa fa-times fa-3x" ng-click="DeletePosts(post, $index)"></i>
         </button>
       </div>
       <div class="row sec">
